[tool.poetry]
name = "leeky"
version = "0.1.0"
description = "leeky - training data contamination techniques for blackbox models"
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.3"
numpy = "^1.24.1"
spacy = "^3.5.0"
rapidfuzz = "^2.13.7"
httpx = {extras = ["h2"], version = "^0.23.3"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
